--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,60 +1,58 @@
-body{
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: rgb(36, 35, 35);
-   font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 /*navbar*/
-nav{
-  font-family: 'Montserrat', sans-serif;
+nav {
+  font-family: "Montserrat", sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: black;
   color: white;
-  min-height:8vh;
+  min-height: 8vh;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
 }
 /*nav links positioning*/
-.nav-links{
+.nav-links {
   display: flex;
   list-style: none;
   justify-content: space-around;
   width: 40%;
 }
 /*nav links styles*/
-.nav-links a{
+.nav-links a {
   color: white;
-  margin-left: 5px;
   margin-left: 5px;
   text-decoration: none;
   font-size: 15px;
-
 }
 /*logo dims*/
-.logo img{
+.logo img {
   width: 9rem;
   height: 3.75rem;
 }
 /*links hover*/
- a:hover{
-  color: #2FB2A0;
+a:hover {
+  color: #2fb2a0;
 }
 /*landing page section*/
-#LandingPage{
- color: white;
- margin: 7.5rem;
- margin-top: 10rem;
+#LandingPage {
+  color: white;
+  margin: 7.5rem;
+  margin-top: 10rem;
 }
 
-#LandingPage h1{
+#LandingPage h1 {
   font-size: 40px;
   padding: 5px;
 }
 
-#LandingPage p{
+#LandingPage p {
   font-size: 20px;
   padding: 5px;
 }
