--- a/styles.css
+++ b/styles.css
@@ -68,19 +68,17 @@ a:hover {
   --white: #ffffff;
   --cef-teal: #2fb2a0;
 }
-
-* {box-sizing:border-box}
-
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
   position: relative;
-  margin: auto;
+  background: #f1f1f1f1;
 }
 
-/* Hide the images by default */
+/* Slides */
 .mySlides {
   display: none;
+  padding: 80px;
+  text-align: center;
 }
 
 /* Next & previous buttons */
@@ -89,18 +87,18 @@ a:hover {
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
+  margin-top: -30px;
   padding: 16px;
-  color: white;
+  color: #888;
   font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
+  font-size: 20px;
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
+  position: absolute;
   right: 0;
   border-radius: 3px 0 0 3px;
 }
@@ -108,26 +106,14 @@ a:hover {
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
+  color: white;
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
+/* The dot/bullet/indicator container */
+.dot-container {
   text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+  padding: 20px;
+  background: #ddd;
 }
 
 /* The dots/bullets/indicators */
@@ -142,24 +128,10 @@ a:hover {
   transition: background-color 0.6s ease;
 }
 
+/* Add a background color to the active dot/circle */
 .active, .dot:hover {
   background-color: #717171;
 }
 
-/* Fading animation */
-.fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
 
-@-webkit-keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
 
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-}
