--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,6 +16,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  height: 100%;
+  width: 100%;
+}
 body {
   background: var(--background-color);
   font-family: "Lato", sans-serif;
@@ -75,10 +79,12 @@ nav {
 }
 
 /*landing page section*/
+
 #landingpage {
   color: var(--white);
   min-height: 100vh;
-  margin: 5rem 0;
+  min-width: 100vw;
+  margin-top: 5rem;
   position: relative;
 }
 #landingpage h1 {
@@ -94,82 +100,113 @@ nav {
   line-height: 1.5;
 }
 .logo-C-image {
-  margin-top: 1rem;
   transform: rotate(33deg);
   position: absolute;
   top: -25px;
   left: -22px;
   height: 1170px;
-  width: 1350px;
+  width: 1350px; 
   background: url("/public/assets/images/logoC.png") no-repeat center
     center/cover;
   z-index: -1;
 }
 
+/* About us Carousel */
+
 /* Slideshow container */
 .slideshow-container {
+  height: 80vh;
+  max-width: 100vw;
   position: relative;
-  background: #f1f1f1f1;
+  margin: auto;
+  background: #333;
+  
+  }
+
+  .mySlides {
+    width: 100%;
+    height: 100%;
+  }
+/* Slidershow images */
+.slideshow-container .mySlides img {
+  width: 100%;
+  height: 100%;
 }
 
-/* Slides */
+/* Hide the images by default */
 .mySlides {
-  display: none;
-  padding: 80px;
-  text-align: center;
+display: none;
 }
 
 /* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -30px;
-  padding: 16px;
-  color: #888;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.prev, .next {
+cursor: pointer;
+position: absolute;
+top: 50%;
+width: auto;
+margin-top: -22px;
+padding: 16px;
+color: white;
+font-weight: bold;
+font-size: 18px;
+transition: 0.6s ease;
+border-radius: 0 3px 3px 0;
+user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-  position: absolute;
-  right: 0;
-  border-radius: 3px 0 0 3px;
+right: 0;
+border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
+.prev:hover, .next:hover {
+background-color: rgba(0,0,0,0.8);
 }
 
-/* The dot/bullet/indicator container */
-.dot-container {
-  text-align: center;
-  padding: 20px;
-  background: #ddd;
+/* Caption text */
+.text {
+color: #f2f2f2;
+font-size: 15px;
+padding: 8px 12px;
+position: absolute;
+bottom: 8px;
+width: 100%;
+text-align: center;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+cursor: pointer;
+height: 15px;
+width: 15px;
+margin: 1rem 0.5rem;
+background-color: #bbb;
+border-radius: 50%;
+display: inline-block;
+transition: background-color 0.6s ease;
 }
 
-/* Add a background color to the active dot/circle */
-.active,
-.dot:hover {
-  background-color: #717171;
+.active, .dot:hover {
+background-color: #717171;
 }
+
+/* Fading animation */
+.fade {
+-webkit-animation-name: fade;
+-webkit-animation-duration: 1.5s;
+animation-name: fade;
+animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+from {opacity: .4}
+to {opacity: 1}
+}
+
+@keyframes fade {
+from {opacity: .4}
+to {opacity: 1}
+}
+
