--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -233,6 +233,7 @@ to {opacity: 1}
   
 }
 
+/* Our Team */
 #our-team{
   margin: 5rem 0;
   color: #fff;
@@ -245,7 +246,7 @@ to {opacity: 1}
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 300px;
-  grid-template-areas: "box1 box2";
+  /* grid-template-areas: "box1 box2"; */
 }
 
 #our-team .members .image,
@@ -259,16 +260,16 @@ to {opacity: 1}
   transition: all 0.5s ease;
 }
 
-#our-team .members .image {
+/* #our-team .members .image {
   grid-area: box1;
-}
+} */
 #our-team .members .image .front-side{
   backface-visibility: hidden;
 
 }
-#our-team .members .description {
+/* #our-team .members .description {
   grid-area: box2;
-}
+} */
 
 #our-team .members .description .front-side {
   backface-visibility: hidden;
