--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,7 +23,7 @@ html {
 }
 body {
   background: var(--background-color);
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 /* Utility Classes */
@@ -43,7 +43,7 @@ body {
 
 /*navbar*/
 nav {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -104,16 +104,16 @@ nav {
   line-height: 1.5;
 }
 .logo-C-image {
-  background: url('/public/assets/images/logoC.png') no-repeat center center/contain;
+  background: url('/public/assets/images/logoC.png') no-repeat center
+    center/contain;
   transform: rotate(33deg);
   position: absolute;
   top: 0px;
   left: -430px;
   height: 100vh;
-  width: 100vw; 
+  width: 100vw;
   z-index: -1;
 }
-
 
 /* About us Carousel */
 
@@ -124,13 +124,12 @@ nav {
   position: relative;
   margin: auto;
   background: #333;
-  
-  }
+}
 
-  .mySlides {
-    width: 100%;
-    height: 100%;
-  }
+.mySlides {
+  width: 100%;
+  height: 100%;
+}
 /* Slidershow images */
 .slideshow-container .mySlides img {
   width: 100%;
@@ -139,79 +138,90 @@ nav {
 
 /* Hide the images by default */
 .mySlides {
-display: none;
+  display: none;
 }
 
 /* Next & previous buttons */
-.prev, .next {
-cursor: pointer;
-position: absolute;
-top: 50%;
-width: auto;
-margin-top: -22px;
-padding: 16px;
-color: white;
-font-weight: bold;
-font-size: 18px;
-transition: 0.6s ease;
-border-radius: 0 3px 3px 0;
-user-select: none;
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-right: 0;
-border-radius: 3px 0 0 3px;
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-background-color: rgba(0,0,0,0.8);
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
 .text {
-color: #f2f2f2;
-font-size: 15px;
-padding: 8px 12px;
-position: absolute;
-bottom: 8px;
-width: 100%;
-text-align: center;
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
 }
 
 /* The dots/bullets/indicators */
 .dot {
-cursor: pointer;
-height: 15px;
-width: 15px;
-margin: 1rem 0.5rem;
-background-color: #bbb;
-border-radius: 50%;
-display: inline-block;
-transition: background-color 0.6s ease;
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 1rem 0.5rem;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
-background-color: #717171;
+.active,
+.dot:hover {
+  background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
--webkit-animation-name: fade;
--webkit-animation-duration: 1.5s;
-animation-name: fade;
-animation-duration: 1.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @-webkit-keyframes fade {
-from {opacity: .4}
-to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fade {
-from {opacity: .4}
-to {opacity: 1}
+  from {
+    opacity: 0.4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Projects */
@@ -222,13 +232,11 @@ to {opacity: 1}
 }
 #projects .project-main {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 2rem;
   margin: 2rem 1rem;
-
 }
 .project-main .project {
-  background :  rgba(31, 31, 32,0.9);
+  background: rgba(31, 31, 32, 0.9);
   min-height: 50vh;
-  
 }
