--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,7 +23,7 @@ html {
 }
 body {
   background: var(--background-color);
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 section {
   padding-top: 130px;
@@ -38,7 +38,7 @@ section {
 }
 .lead-heading {
   font-size: 4rem;
-  font-family: 'Epilogue', sans-serif;
+  font-family: "Epilogue", sans-serif;
 }
 .primary-text {
   font-size: 1.8rem;
@@ -49,7 +49,7 @@ nav {
   position: sticky;
   top: 0;
   z-index: 2;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -109,14 +109,14 @@ nav {
   line-height: 1.5;
 }
 #landingpage .landingpage-image {
-  background: url('../public/assets/images/walle-removebg-preview.png')
+  background: url("../public/assets/images/walle-removebg-preview.png")
     no-repeat center center/cover;
   width: 50%;
   height: 600px;
   margin-left: 100px;
 }
 .logo-C-image {
-  background: url('../public/assets/images/logoC.png') no-repeat center
+  background: url("../public/assets/images/logoC.png") no-repeat center
     center/contain;
   transform: rotate(33deg);
   position: absolute;
@@ -277,7 +277,7 @@ nav {
   align-self: center;
   text-align: center;
   height: 400px;
- 
+
   position: relative;
   transform-style: preserve-3d;
   transition: all 0.5s ease;
@@ -300,7 +300,7 @@ nav {
 }
 
 #our-team .members .tile .front-side p {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 #our-team .members .tile:hover {
@@ -340,6 +340,7 @@ nav {
   top: 0;
   text-align: end;
   margin-left: auto;
+  width: 75%;
 }
 
 #our-team .members .tile .back-side ul li {
@@ -359,10 +360,8 @@ nav {
   color: var(--cef-teal);
   border-bottom: 1px dashed var(--cef-teal);
 }
-img{
-
-    max-width: 63%;
-    max-height: 100%;
-object-fit: contain;
-
+img {
+  max-width: 63%;
+  max-height: 100%;
+  object-fit: contain;
 }
