--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,25 +1,24 @@
-
-html,body {
+html,
+body {
   overflow-x: hidden !important;
 }
 /* For phones */
 
 /* For all other phones */
-@media (max-width : 700px)
-{
+@media (max-width: 700px) {
   nav {
-      flex-direction: column;
-      height: 20vh !important;
-      /* padding: 1rem 0; */
-      justify-content: space-evenly;
+    flex-direction: column;
+    height: 20vh !important;
+    /* padding: 1rem 0; */
+    justify-content: space-evenly;
   }
   .nav-links {
-      width: 100% !important;
-      margin: 1rem auto;
+    width: 100% !important;
+    margin: 1rem auto;
   }
   .nav-links a {
-      font-size: 1rem;
-      margin: 0.5rem !important;
+    font-size: 1rem;
+    margin: 0.5rem !important;
   }
   #landingpage {
     margin: 0;
@@ -28,14 +27,14 @@ html,body {
     justify-content: center;
     align-items: center;
     min-height: 50vh;
-    padding:  0 2rem;
+    padding: 0 2rem;
   }
-  #landingpage h1{
-      margin: 2rem 0;
+  #landingpage h1 {
+    margin: 2rem 0;
   }
 
   #landingpage .landingpage-content {
-    height:100%;
+    height: 100%;
     width: 100%;
   }
   #landingpage .landingpage-image {
@@ -44,63 +43,62 @@ html,body {
   .lead-heading {
     font-size: 2rem;
     width: 100%;
-  
   }
   .primary-text {
     font-size: 1rem;
     width: 100%;
   }
   .logo img {
-    height:80px;
+    height: 80px;
     margin-top: 2rem;
   }
   .logo-C-image {
     top: 100px;
     left: 0px;
     height: 50vh;
-    width: 75vw; 
-    
+    width: 75vw;
   }
   .slideshow-container {
-    height: 40vh;  
-    }
-   #projects .project-main {
+    height: 40vh;
+  }
+  #projects .project-main {
     grid-template-columns: 1fr;
-   }
- 
+  }
+  #our-team .members {
+    grid-template-columns: 1fr;
+  }
+  #our-team .members .tile:nth-child(1) {
+    grid-column: 1 / span 1;
+    margin: 10px 10%;
+  }
 }
 /* For medium sized phones like Moto G4 */
-@media (max-height : 700px)
-{
-    nav {
-        height: 25vh !important;
-    }
+@media (max-height: 700px) {
+  nav {
+    height: 25vh !important;
+  }
 }
 /* For small phones like iPhone 5 */
-@media (max-height : 600px)
-{
-    nav {
-        height: 25vh !important;
-    }
-    .nav-links a {
-        font-size: 0.85rem !important;
-        margin: 0.5rem !important;
-    }
-    .lead-heading {
-        font-size: 1.5rem;
-    
-      }
-      .primary-text {
-        font-size: 0.85rem;
-      }
-
-}.landingpage-image
+@media (max-height: 600px) {
+  nav {
+    height: 25vh !important;
+  }
+  .nav-links a {
+    font-size: 0.85rem !important;
+    margin: 0.5rem !important;
+  }
+  .lead-heading {
+    font-size: 1.5rem;
+  }
+  .primary-text {
+    font-size: 0.85rem;
+  }
+}
+.landingpage-image
 
 /* For tablets and iPads */
-@media (min-width: 768px) and (max-width: 900px)
-{
-
-  #landingpage{
+@media (min-width: 768px) and (max-width: 900px) {
+  #landingpage {
     min-height: 50vh;
   }
 
@@ -109,38 +107,31 @@ html,body {
     margin: 0 1rem;
   }
 
-
   .logo-C-image {
     top: 120px;
     left: -5px;
     height: 50vh;
-    width: 75vw; 
-    
+    width: 75vw;
   }
   .lead-heading {
     font-size: 2.5rem;
     width: 100%;
     margin: 3rem 0 !important;
-    
   }
   .primary-text {
     font-size: 1.5rem;
     width: 100%;
-    
   }
   .slideshow-container {
-    height: 50vh;  
-    }
-    #projects .project-main {
-      grid-template-columns: repeat((2,1fr));
-    }
-
-
+    height: 50vh;
+  }
+  #projects .project-main {
+    grid-template-columns: repeat((2, 1fr));
+  }
 }
 /* For iPad Pro */
-@media (min-width : 1000px)
-{
-  #landingpage{
+@media (min-width: 1000px) {
+  #landingpage {
     min-height: 50vh;
   }
   .nav-links {
@@ -151,20 +142,17 @@ html,body {
     font-size: 1.5rem;
   }
 
-
   .logo-C-image {
     top: 100px;
     left: -5px;
     height: 50vh;
-    width: 75vw; 
-    
+    width: 75vw;
   }
   .slideshow-container {
-    height: 50vh;  
-    }
-    #projects .project-main {
-      grid-template-columns: 1fr ;
-      grid-gap: 3rem !important;
-    }
-
+    height: 50vh;
+  }
+  #projects .project-main {
+    grid-template-columns: 1fr;
+    grid-gap: 3rem !important;
+  }
 }
