--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -39,11 +39,16 @@ section {
   max-width: 1200px;
 }
 .lead-heading {
-  font-size: 4rem;
+  font-size: clamp(35px, 5vw, 60px) !important;
   font-family: 'Epilogue', sans-serif;
 }
+.small-heading {
+  font-size: 2.5rem;
+  margin: 1rem 0;
+}
 .primary-text {
-  font-size: 1.8rem;
+  font-size: clamp(20px, 2vw, 30px) !important;
+  /* font-size: 1.8rem; */
 }
 .small-text {
   font-size: 1.3rem;
@@ -91,7 +96,7 @@ nav {
   align-items: center;
   background-color: black;
   color: white;
-  height: 12vh;
+  min-height: 12vh;
   width: 100%;
   transition: height 0.2s ease;
 }
@@ -136,27 +141,27 @@ nav {
   position: relative;
   padding: 0 5rem;
   display: flex;
-  padding-top: 150px !important;
-  margin-top: 5rem;
+  padding-top: 80px !important;
+  margin-top: 3rem;
 }
 #landingpage h1 {
-  margin: 5rem 0;
+  margin: 2rem 0;
+  position: relative;
 }
 
 #landingpage .landingpage-content {
   height: 50%;
   width: 80%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
   line-height: 1.5;
+  margin: 100px 0;
 }
 #landingpage .landingpage-image {
   background: url('../public/assets/images/robot.png') no-repeat center
     center/contain;
   width: 50%;
-  height: 600px;
+  max-height: 500px;
   margin-left: 100px;
+  margin-top: 100px;
 }
 .landingpage-tagline {
   width: 70%;
@@ -240,7 +245,8 @@ nav {
   transform: translate(-50%, -50%);
   width: 50%;
   line-height: 2;
-  font-size: 2rem;
+  font-size: clamp(20px, 2vw, 30px) !important;
+
   text-align: center;
 }
 .about-us-heading {
@@ -308,17 +314,77 @@ nav {
   text-align: center;
 }
 #projects .container {
-  max-width: 1500px;
+  max-width: 1600px;
 }
 #projects .project-main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 2rem;
+  grid-gap: 1rem;
   margin: 2rem 1rem;
 }
 .project-main .project {
-  
   min-height: 50vh;
+}
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  width: 100%;
+  height: 60vh;
+
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: rgb(32, 32, 32);
+  color: white;
+  transform: rotateY(180deg);
+  align-items: center;
+  min-height: 60vh;
+}
+
+.card-content {
+  min-height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 1rem;
+}
+.card-content .primary-text {
+  line-height: 1.6;
 }
 /* .project img {
   height: 100%;
@@ -328,6 +394,7 @@ nav {
 /* Our Team */
 #our-team {
   min-height: 100vh;
+  padding-bottom: 3rem;
 }
 #our-team .container {
   height: 100%;
@@ -387,93 +454,52 @@ nav {
   z-index: 2;
 }
 
-/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
-.flip-card {
-  background-color: transparent;
-  width: 100%;
-  height: 60vh;
-  
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
-}
-
-/* This container is needed to position the front and back side */
-.flip-card-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-/* Do an horizontal flip when you move the mouse over the flip box container */
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-/* Position the front and back side */
-.flip-card-front, .flip-card-back {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden; /* Safari */
-  backface-visibility: hidden;
-}
-
-/* Style the front side (fallback if image is missing) */
-.flip-card-front {
-  background-color: #bbb;
-  color: black;
-}
-
-/* Style the back side */
-.flip-card-back {
-  background-color: rgb(32, 32, 32);
-  color: white;
-  transform: rotateY(180deg);
-  align-items: center;
-  min-height: 60vh;
-}
-
-.flip-card-back h1{
-  padding: 3rem 0 1rem 0;
-  font-size: 2rem;
-}
-
-.flip-card-back p{
-  padding: 1rem 1rem 0 1rem;
-  font-size: 1.25rem;
-  line-height: 1.75;
-}
-footer {
-  
+#footer {
   z-index: 3;
   font-family: 'Montserrat', sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content:center;
+  justify-content: center;
   align-items: center;
   background-color: black;
   color: white;
-  height: 15vh;
+  height: 30vh;
   width: 100%;
-  
 }
 
-footer a{
-padding: 1rem;
+.social-media-icons {
+  display: flex;
+  margin: 1rem auto;
+  height: 50%;
+  width: 30%;
+  justify-content: space-evenly;
+  align-items: center;
+}
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  transition: all 0.4s ease;
 }
 
-footer div{
-  
-  color: #2fb2a0;
+/* Add a hover effect if you want */
+.fb:hover {
+  color: #4267b2;
 }
-
-footer img{
-  height: 25px;
-  width: 25px;
- }
-
- #copyright{
-   padding-top:1rem;
- }
+.tw:hover {
+  color: #1da1f2;
+}
+.in:hover {
+  color: #c13584;
+}
+.li:hover {
+  color: #2867b2;
+}
+#copyright {
+  font-size: 1.2rem;
+  margin: 2rem 0;
+}
